--- a/Sample-01/package.json
+++ b/Sample-01/package.json
@@ -16,7 +16,7 @@
     "prod": "npm-run-all --parallel server api-server"
   },
   "dependencies": {
-    "@auth0/auth0-react": "^1.12.0",
+    "@auth0/auth0-react": "beta",
     "@babel/core": "^7.20.2",
     "@babel/plugin-syntax-flow": "^7.18.6",
     "@babel/plugin-transform-react-jsx": "^7.19.0",
