Replace test credentials for v2 format

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
       - run:
           name: Replace Auth0 test credentials
           command: |
-            echo "{ \"domain\": \"$AUTH0_TEST_DOMAIN\", \"clientId\": \"$AUTH0_TEST_CLIENT_ID\", \"audience\": \"$AUTH0_TEST_API_IDENTIFIER\" }" > $AUTH0_CFG
+            echo "{ \"domain\": \"$AUTH0_TEST_DOMAIN\", \"clientId\": \"$AUTH0_TEST_CLIENT_ID\", \"authorizationParams\": { \"audience\": \"$AUTH0_TEST_API_IDENTIFIER\" } }" > $AUTH0_CFG
       - setup_remote_docker:
           version: 19.03.13
       - run:
